# osm-health-check

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bugs.yml  docs.yml  features.yml
.github/workflows/: ci.yaml  python-check.yaml
app/: pyproject.toml
src/: main.py
