[project]
name = "osm-health-check"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Suárez",email = "jsuadia@gmail.com"}
]
license-files = [
"LICENSE"
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "bandit (>=1.9.3,<2.0.0)",
    "safety (>=3.7.0,<4.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
]

[tool.ruff.lint]
line-length = 100

[tool.black]
line-length = 100